Small style fix.
The comments count drops to another line.
There's still a glitch there - its not aligned properly with the text in the row...

--- a/src/app/components/ToDo/_DoThing.scss
+++ b/src/app/components/ToDo/_DoThing.scss
@@ -40,7 +40,7 @@
     }
 
     .thing-body {
-      width: 100%;
+      max-width: 100%;
       display: inline-block;
       font-size: 17px;
       overflow-x: hidden;
